# uctest

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  openssl_legacy.cnf  pyproject.toml
docs/: input_diet.md
docs/data30/: baseball_total_question.md
tests/: conftest.py  test_call.py  test_chat.py  test_diet.py  test_fetch.py  test_fetch_baseball_data30.py  test_game_status.py  test_games.py  test_local_providers.py  test_prompts.py
uctest/: __init__.py  call.py  chat.py  cli.py  config.py  fetch.py  games.py  io.py  prompt_builder.py  prompts.py  schemas.py
uctest/data30/: __init__.py  baseball.py  client.py  diet.py
uctest/livescore/: __init__.py  cheer.py  dao.py  i18n.py  pool.py  sp.py
uctest/llm/: claude_provider.py  factory.py  gemini_provider.py  local_provider.py  openai_provider.py  provider.py
uctest/scripts/: build_report.py
uctest/templates/: system.jinja  user.jinja
