[project]
name = "uctest"
version = "0.1.0"
description = "RasChat unifiedchat 시나리오·LLM 매트릭스 CLI 테스트 도구"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "google-genai>=1.68.0",
    "fastapi>=0.110.0",
    "pyodbc>=5.2",
]

[project.optional-dependencies]
claude = ["anthropic>=0.52.0"]
openai = ["openai>=1.75.0"]
all-llm = ["anthropic>=0.52.0", "openai>=1.75.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
uctest = "uctest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uctest"]

[tool.hatch.build.targets.wheel.force-include]
"uctest/templates" = "uctest/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
